--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         insert summary here and significance
       </p>
      <h3>Pathways</h3>
-    <img src="assets/image1.jpeg" alt= "need to put in a photo" class="center4">
+    <img src="homepage.png" alt= "need to put in a photo" class="center4">
 
     
         <p>Arts & Communications</p>
