--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
   
   <body>
     <header>
-	      <nav>
-	      <ul>
-		<li>
-		  <a href="index.html"><b>Home</b></a>
-		</li>
-		<li>
-		  <a href="aboutus.html"><b>Health Services</b></a>
-		</li>
-	      </ul>
-	      </nav>
+
 	    
+	    <div class="header">
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
     </header>
 
  
