--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
   
   <body>
     <header>
-
-	    
-	    <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
-  <div class="header-right">
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-  </div>
-</div>
+	      <nav>
+	      <ul>
+		<li>
+		  <a href="blast-off.png"><b>logo</b></a>
+		</li>
+		<li>
+		  <a href="index.html"><b>Home</b></a>
+		</li>
+		<li>
+		  <a href="aboutus.html"><b>Health Services</b></a>
+		</li>
+	      </ul>
+	      </nav>
     </header>
 
  
