--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
   
   <body>
     <header>
-	      <nav>
-	      <ul>
-		<li>
-		  <a href="blast-off.png"><b>logo</b></a>
-		</li>
-		<li>
-		  <a href="index.html"><b>Home</b></a>
-		</li>
-		<li>
-		  <a href="aboutus.html"><b>Health Services</b></a>
-		</li>
-	      </ul>
-	      </nav>
+	      <div class="nav-container">
+			<div class="logo-ref">
+				<img src="/BugsBunny.png">
+			</div>
+			<div class="listed-items">
+				<ul class="some-cases">
+					<li>
+						<a href="/contact">Contact</a>
+					</li>
+					<li>
+						<a href="/about-me">About</a>
+					</li>
+					<li>
+						<a href="/blog">Blog</a>
+					</li>
+				</ul>
     </header>
 
  
