--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
 	      <div class="nav-container">
 			<div class="logo-ref">
-				<img src="/BugsBunny.png">
+				<img src="blast-off.png">
 			</div>
 			<div class="listed-items">
 				<ul class="some-cases">
