--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
 	      <div class="nav-container">
 			<div class="logo-ref">
-				<img src="blast-off.png">
+				<img src="/Blast-Off.png">
 			</div>
 			<div class="listed-items">
 				<ul class="some-cases">
@@ -25,7 +25,7 @@
 						<a href="/contact">Contact</a>
 					</li>
 					<li>
-						<a href="/about-me">About</a>
+						<a href="/aboutus.html">About</a>
 					</li>
 					<li>
 						<a href="/blog">Blog</a>
