--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 						<a href="/contact">Contact</a>
 					</li>
 					<li>
-						<a href="/aboutus.html">About</a>
+						<a href="/aboutus.html">About Us</a>
 					</li>
 					<li>
-						<a href="/blog">Blog</a>
+						<a href="/blog">Packages</a>
 					</li>
 				</ul>
     </header>
