--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 			<div class="listed-items">
 				<ul class="some-cases">
 					<li>
-						<a href="/contact">Contact</a>
+						<a href="/contact.html">Contact</a>
 					</li>
 					<li>
 						<a href="/aboutus.html">About Us</a>
 					</li>
 					<li>
-						<a href="/blog">Packages</a>
+						<a href="/packages.html">Packages</a>
 					</li>
 				</ul>
     </header>
