--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,18 @@
-<p>add fake contact info and all the citations here</p>
+    <header>
+	      <div class="nav-container">
+			<div class="logo-ref">
+				<img src="/Blast-Off.png">
+			</div>
+			<div class="listed-items">
+				<ul class="some-cases">
+					<li>
+						<a href="/contact.html">Contact</a>
+					</li>
+					<li>
+						<a href="/aboutus.html">About Us</a>
+					</li>
+					<li>
+						<a href="/packages.html">Packages</a>
+					</li>
+				</ul>
+    </header>
