--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			<div class="listed-items">
 				<ul class="some-cases">
 					<li>
+						<a href="/index.html">Home</a>
+					</li>
+					<li>
 						<a href="/contact.html">Contact</a>
 					</li>
 					<li>
