--- a/packages.html
+++ b/packages.html
@@ -23,6 +23,9 @@
 			<div class="listed-items">
 				<ul class="some-cases">
 					<li>
+						<a href="/index.html">Home</a>
+					</li>
+					<li>
 						<a href="/contact.html">Contact</a>
 					</li>
 					<li>
