--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main>
 	     <h1>Blast Off</h1>
-	    <img src="home.png" alt= "austronaut photo" class="center4">
+	    <img src="home1.png" alt= "austronaut photo" class="center1">
 	    <p>Welcome to the place where all your dream begin.</p>
       <h3>All About Blast Off</h3>
       <p>
