--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
  
 
     <main>
-	     <h1>Blast Off</h1>
+	
 	    <img src="home1.png" alt= "austronaut photo" class="center1">
 	    <p>Welcome to the place where all your dream begin.</p>
-      <h3>All About Blast Off</h3>
+      <<h1>Our Mission Statement</h1>
       <p>
-        insert company mission statement
+        We guarantee all your space exploration dreams will come true when you fly with us. 
       </p>
-     <h3>Cost, etc. </h3>
+     <h3>xxx</h3>
     
 
     
