--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
 	
 	    <img src="home1.png" alt= "austronaut photo" class="center1">
-	    <p>Welcome to the place where all your dream begin.</p>
+
       <<h1>Our Mission Statement</h1>
       <p>
         We guarantee all your space exploration dreams will come true when you fly with us. 
@@ -54,7 +54,13 @@
     </main>
 	  
 	  <footer>
-		   <p>follow us @</p>
+		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. </p>
+		  <p>Follow our instagram @BlastOff</p>
+		  <p>Email us at blastoff@space.com for more information</p>
+		  <p>Blast Off Headquarters</p>
+		  <p>200 Blue Jay Drive Liberty MO 64068</p>
+		  <p>(816-812-3313)</p>
+
 	  </footer>
 	  
 	  
