--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <main>
 	
-	    <img src="home1.png" alt= "austronaut photo" class="center1">
+	    <img src="home1.png" alt= "austronaut photo with the words blast off" style="width:100%">
 
-      <<h1>Our Mission Statement</h1>
+      <h1>Our Mission Statement</h1>
       <p>
         We guarantee all your space exploration dreams will come true when you fly with us. 
       </p>
