--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main>
 	
-	    <img src="home1.png" alt= "austronaut photo with the words blast off" style="width:100%">
+	    <img src="home.png" alt= "austronaut photo with the words blast off" style="width:100%">
 
       <h1>Our Mission Statement</h1>
       <p>
