--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
     </main>
 	  
 	  <footer>
-		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. </p>
-		  <p>Follow our instagram @BlastOff</p>
-		  <p>Email us at blastoff@space.com for more information</p>
-		  <p>Blast Off Headquarters</p>
-		  <p>200 Blue Jay Drive Liberty MO 64068</p>
-		  <p>(816-812-3313)</p>
+		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. < class="footer" /p>
+		  <p>Follow our instagram @BlastOff< class="footer" /p>
+		  <p>Email us at blastoff@space.com for more information< class="footer" /p>
+		  <p>Blast Off Headquarters<class="footer"/p>
+		  <p>200 Blue Jay Drive Liberty MO 64068<class="footer"/p>
+		  <p>(816-812-3313)<class="footer"/p>
 
 	  </footer>
 	  
