--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     
       
     </main>
-	  
+	   <div class="footer">
 	  <footer style="background: #030357">
 		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. </p>
 		  <p>Follow our instagram @BlastOff</p>
@@ -60,7 +60,7 @@
 		  <p>Blast Off Headquarters<class="footer"/p>
 		  <p>200 Blue Jay Drive Liberty MO 64068</p>
 		  <p>(816-812-3313)</p>
-
+	</div>
 	  </footer>
 	  
 	  
