--- a/aboutus.html
+++ b/aboutus.html
@@ -47,8 +47,16 @@
       
     </main>
 	  
-	  <footer>
-		   <p>follow us @</p>
+	  <footer style="background: #030357">
+		  <div class="footer">
+			  <p> </p>
+		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. </p>
+		  <p>Follow our instagram @BlastOff</p>
+		  <p>Email us at blastoff@space.com for more information</p>
+		  <p>Blast Off Headquarters<class="footer"/p>
+		  <p>200 Blue Jay Drive Liberty MO 64068</p>
+		  <p>123 - 456- 7890</p>
+	</div>
 	  </footer>
 	  
 	  
