--- a/packages.html
+++ b/packages.html
@@ -39,11 +39,10 @@
 
  
 
-    <main>
+    <package>
 	    <p>add 4-5 different types of packages that include the cost and other information</p>
     <div class="main">
 
-<h1>MYLOGO.COM</h1>
 <hr>
 
 <h2>PORTFOLIO</h2>
@@ -92,7 +91,7 @@
 
     
       
-    </main>
+    </package>
 	  
 	  <footer style="background: #030357">
 		  <div class="footer">
