--- a/packages.html
+++ b/packages.html
@@ -41,7 +41,7 @@
 
     <package>
 	    <p>add 4-5 different types of packages that include the cost and other information</p>
-    <div class="main">
+    <div class="main1">
 
 <hr>
 
