--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
 						<a href="/aboutus.html">About Us</a>
 					</li>
 					<li>
-						<a href="/packages.html">Packages</a>
+						<a href="/packages.html">Travel Information</a>
 					</li>
 				</ul>
     </header>
