--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <main>
 	   
 	    <p>All out images come from canva which has the policy below.</p>
-	    <img src="/Blast-Off.png">
+	    <img src="home.png" alt= "canva licensing agreement" style="width:50%" display: block; margin-left: auto; margin-right: auto;>
 	    <p>Most of the text we used either has came from canva or we used Courier which has royalty-free use</p>
       
     </main>
