--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <main>
 	   
 	    <p>All out images come from canva which has the policy below.</p>
-	    <img src="canva.png" alt= "canva licensing agreement" style="width:50%" class="center2">
+	    <img src="canva.png" alt= "canva licensing agreement" class="center2">
 	    <p>Most of the text we used either has came from canva or we used Courier which has royalty-free use</p>
       
     </main>
