--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	    <img src="home.png" alt= "austronaut photo with the words blast off" style="width:100%">
 
       <h1>Come Travel With Us</h1>
-	     <p><We are Blast Off the top space tourism company since we launched in October 2018. We have been the company of the year for the past 3 years due to our amazing staff who make the expierence amazing. /p>
+	     <p><We are Blast Off the top space tourism company since we launched in October 2018. We have been the company of the year for the past 3 years due to our amazing staff who make the expierence amazing. </p>
 	    <h2>Safety</h2>
       <p>
         We have the best equipment which has gone through years of testing before it is put out. There are teams of over 100 people behind each of our vechiles. The equipment we use is some of the best quality you can get. We customize everything to cater to your needs. We perform a minimum of 30 tests on each vechile before we release it to ensure that everything is as safe as possible. Additionally, we have requirments that you have to meet before you are allowed to travel. There is also a list of rules such as how long training and recovery are, more information on this can be found <a href="/packages.html">here</a>. 
