--- a/index.html
+++ b/index.html
@@ -56,15 +56,14 @@
       <img src="black.png" style="width:100%">
     </main>
 	   
-	  <footer style="background: #030357">
-		  <div class="footer">
+	  <footer>
+		  
 		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. </p>
 		  <p>Follow our instagram @BlastOff</p>
 		  <p>Email us at blastoff@space.com for more information</p>
-		  <p>Blast Off Headquarters<class="footer"/p>
+		  <p>Blast Off Headquarters</p>
 		  <p>200 Blue Jay Drive Liberty MO 64068</p>
 		  <p>123 - 456- 7890</p>
-	</div>
 	  </footer>
 	  
 	  
