--- a/packages.html
+++ b/packages.html
@@ -41,7 +41,7 @@
    </style>
 </head>
 <body>
-<div class="travel1">
+<div class="travelInfo">
 
 <!-- MAIN (Center website) -->
 <div class="centertravel">
