--- a/packages.html
+++ b/packages.html
@@ -96,7 +96,7 @@
 </div>
 </div>
 
-	  <footer style="background: #030357">
+	  <footer>
 		  <div class="footer">
 			  <p> </p>
 		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. </p>
