--- a/packages.html
+++ b/packages.html
@@ -46,11 +46,24 @@
 <!-- MAIN (Center website) -->
 <div class="centertravel">
 
-<h1>MYLOGO.COM</h1>
+<h1>Travel Information</h1>
 <hr>
 
-<h2>PORTFOLIO</h2>
-<p>Resize the browser window to see the responsive effect.</p>
+<h2>Planning</h2>
+<p class="home">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa.</p>
+
+<div class="contenttravel">
+  <img src="/vechiles.png" alt="space ship" style="width:100%">
+  <h3>Vechiles</h3>
+  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+</div>
+
+<h2>Launch Process</h2>
+<p class="home">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa.</p>
+
+	<h2>Packages</h2>
+<p class="home">Each package includes the cost of training, equipment, and recovery. The cost for additional upgrades is not listed as it is depends on each flight. </p>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
@@ -84,13 +97,14 @@
   </div>
 <!-- END GRID -->
 </div>
-
+	
 <div class="contenttravel">
   <img src="/w3images/p3.jpg" alt="Bear" style="width:100%">
-  <h3>Some Other Work</h3>
+  <h3>Vechiles</h3>
   <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
   <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
 </div>
+
 
 <!-- END MAIN -->
 </div>
