--- a/packages.html
+++ b/packages.html
@@ -60,10 +60,10 @@
 </div>
 
 <h2>Launch Process</h2>
-<p class="home">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa.</p>
+<p class="travelText">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa.</p>
 
 	<h2>Packages</h2>
-<p class="home">Each package includes the cost of training, equipment, and recovery. The cost for additional upgrades is not listed as it is depends on each flight. </p>
+<p class="travelText">Each package includes the cost of training, equipment, and recovery. The cost for additional upgrades is not listed as it is depends on each flight. </p>
 
 <!-- Portfolio Gallery Grid -->
 <div class="row">
@@ -104,19 +104,20 @@
   <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
   <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
 </div>
+	
 
 
 <!-- END MAIN -->
 </div>
 </div>
-
+ <img src="/black.png" style="width:100%">
 	  <footer>
 		  <div class="footer">
 			  <p> </p>
 		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. </p>
 		  <p>Follow our instagram @BlastOff</p>
 		  <p>Email us at blastoff@space.com for more information</p>
-		  <p>Blast Off Headquarters<class="footer"/p>
+		  <p>Blast Off Headquarters</p>
 		  <p>200 Blue Jay Drive Liberty MO 64068</p>
 		  <p>123 - 456- 7890</p>
 	</div>
