--- a/contact.html
+++ b/contact.html
@@ -25,13 +25,13 @@
 						<a href="/index.html">Home</a>
 					</li>
 					<li>
-						<a href="/contact.html">Contact</a>
+						<a href="/packages.html">Travel Information</a>
 					</li>
 					<li>
 						<a href="/aboutus.html">About Us</a>
 					</li>
 					<li>
-						<a href="/packages.html">Travel Information</a>
+						<a href="/contact.html">Contact</a>
 					</li>
 				</ul>
     </header>
@@ -39,21 +39,19 @@
  
 
     <main>
-	   
-	    <p>All out images come from canva which has the policy below.</p>
+	    <h1>Sources Used to Create the Website</h1>
+	    <p class="travelText">All out images come from canva which has the policy below.</p>
 	    <img src="canva.png" alt= "canva licensing agreement" class="center2">
-	    <p>Most of the text we used either has came from canva or we used Courier which has royalty-free use</p>
+	    <p class="travelText">Most of the text we used either has came from canva or we used Courier which has royalty-free use</p>
       
     </main>
 	  
-	  <footer style="background: #030357">
+	  <footer>
 		  <div class="footer">
-			  <p>  </p>
-			  <p>  </p>
 		  <p>Subscribe to Blast Off Plus for the latest information on all launches, early access to tickets, and opportunities to help shape the future. </p>
 		  <p>Follow our instagram @BlastOff</p>
 		  <p>Email us at blastoff@space.com for more information</p>
-		  <p>Blast Off Headquarters<class="footer"/p>
+		  <p>Blast Off Headquarters</p>
 		  <p>200 Blue Jay Drive Liberty MO 64068</p>
 		  <p>123 - 456- 7890</p>
 	</div>
