--- a/aboutus.html
+++ b/aboutus.html
@@ -42,7 +42,7 @@
 	    <h1>About Blast Off</h1>
 	    
 	    <h2>Our Mission Statement</h2>
-<p class= "travelText">We guarantee all your space exploration dreams will come true when you fly with us. </p>
+<p class= "mission">We guarantee all your space exploration dreams will come true when you fly with us. </p>
     
 <h2>Our History</h2>
     <p class= "home">Blast Off was founded by thousands of astronauts with the idea of bringing space travel into the future. Our company is at the forefront of all modern space travel, with our continuous efforts to make traveling more safe and accessible for all. Blast Off has been flight-testing our safety systems since 2010. This includes several successful missions with test subjects. We have been in the space tourism business since 2018. We had a successful launch and have been expanding our business with better vehicles and a bigger variety of packages. </p>
