--- a/packages.html
+++ b/packages.html
@@ -52,6 +52,9 @@
 <h2>Planning</h2>
 <p class="home">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa.</p>
 
+<h2>Training</h2>
+<p class="home">make sure to provide all the correct information as well as proof of yout Space Visa.</p>
+
 <div class="contenttravel">
   <img src="/vechile.png" alt="space ship" style="width:100%">
   <h3>Vechiles</h3>
