--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,12 @@
 	    <p class="travelText">All out images come from canva which has the policy below.</p>
 	    <img src="canva.png" alt= "canva licensing agreement" class="center2">
 	    <p class="travelText">Most of the text we used either has came from canva or we used Courier which has royalty-free use</p>
-      
+	    <h2>For Our Recovery Information We Used the Site Below</h2>
+	    <p class="travelText">Wayne. (2022, July 22). Can astronauts walk after returning from space? LunarSail.com. Retrieved March 1, 2023, from https://www.lunarsail.com/can-astronauts-walk-after-returning-from-space/#:~:text=It%20may%20take%2045%20days,the%20body%2C%20activeness%2C%20etc. </p>
+	    <h2>Our Plan of Work log</h2>
+	    <p>https://drive.google.com/file/d/1jUkRHkBXd97EVlSrtfe9aUXbBmRlgT9T/view?usp=share_link</p>
+	    <h2>Our Copyright Checklist</h2>
+	    <p>https://drive.google.com/file/d/1ND2xqbP_GPETK0MpOIihGrBB72MNwntt/view?usp=share_link</p>
     </main>
 	  
 	  <footer>
