--- a/packages.html
+++ b/packages.html
@@ -50,20 +50,20 @@
 <hr>
 
 <h2>Planning</h2>
-<p class="home">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa.</p>
+<p class="home">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa. The entire trip from training to recovery will take 2 months. Please note this can be longer if your body takes longer to adjust when you land.</p>
 
 <h2>Training</h2>
-<p class="home">make sure to provide all the correct information as well as proof of yout Space Visa.</p>
+<p class="home">We have a 2 week long training camp that all travellers must go thorugh. During this time you are put to test in simulated environment to show you what you will feel like in space. You are also put in clothing and suits that you would wear daily in space. If you do not adapt in this 2 week time period we recommend that you do not continue with this trip due to health risks.</p>
 
 <div class="contenttravel">
   <img src="/vechile.png" alt="space ship" style="width:100%">
   <h3>Vechiles</h3>
-  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+  <p>Our vechiles get designed by some of the best engineers to meet our high standards. We have long testing periods for each vechile to ensure that they are safe for our passengers. The vechile you will board on will depend on how mnay people we have flying out that day. The two vechiles are not too different from one another, so the experience is similar in both. We try to be energy efficent when we have a smaller group, which is why we have two different vechiles. In our vechiles you will feel just like you are at home due to our advanced technology that adjusts the environment inside the ship or plane to be the same as on earth. </p>
+ 
 </div>
 
 <h2>Launch Process</h2>
-<p class="travelText">Our waistlist is long, as we are one of the only space tourism companies. To meet everypone's demands we hope that you can be patient with us. We will try to do everything to make this a wonderful expierence for you. In order to book the earlist slot make sure to provide all the correct information as well as proof of yout Space Visa.</p>
+<p class="travelText">The launching process is similar to taking off in a flight, except it is longer and you will be wearing your suits. </p>
 
 	<h2>Packages</h2>
 <p class="travelText">Each package includes the cost of training, equipment, and recovery. The cost for additional upgrades is not listed as it is depends on each flight. </p>
@@ -72,29 +72,29 @@
 <div class="row">
   <div class="column">
     <div class="contenttravel">
-      <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
+      <img src="/solo.png" style="width:100%">
+      <h3>Solo Trip</h3>
       <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
-    <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
-      <h3>My Work</h3>
+    <img src="/couple.png" alt="Lights" style="width:100%">
+      <h3>Honeymoon Package</h3>
       <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
-    <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
-      <h3>My Work</h3>
+    <img src="/family.png" alt="Nature" style="width:100%">
+      <h3>Small Group/Family</h3>
       <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
-    <img src="/w3images/mountains.jpg" alt="Mountains" style="width:100%">
-      <h3>My Work</h3>
+    <img src="/part.png" alt="Mountains" style="width:100%">
+      <h3>Party Pack</h3>
       <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
     </div>
   </div>
@@ -103,9 +103,9 @@
 	
 <div class="contenttravel">
   <img src="/w3images/p3.jpg" alt="Bear" style="width:100%">
-  <h3>Vechiles</h3>
-  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
-  <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+  <h3>Recovery</h3>
+  <p>Most astronauts take around 45 days to recover from being in space(Wayne). Due to our high technology systems our passengers only need 15-30 days to recover. However, there may be excepts if you have other health risks. During this period you are...</p>
+ 
 </div>
 	
 
