--- a/packages.html
+++ b/packages.html
@@ -63,7 +63,7 @@
 </div>
 
 <h2>Launch Process</h2>
-<p class="travelText">The launching process is similar to taking off in a flight, except it is longer and you will be wearing your suits. </p>
+<p class="travelText">The launching process is similar to taking off in a flight, except it is longer and you will be wearing your suits. It takes around 17 hours to get to space and we encourage that you do not move out of your seat unless it is an emergency.</p>
 
 	<h2>Packages</h2>
 <p class="travelText">Each package includes the cost of training, equipment, and recovery. The cost for additional upgrades is not listed as it is depends on each flight. </p>
@@ -74,37 +74,36 @@
     <div class="contenttravel">
       <img src="/solo.png" style="width:100%">
       <h3>Solo Trip</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <p>It costs $10,000 which includes a room with a single bed, food, drinks, and equipment. </p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
-    <img src="/couple.png" alt="Lights" style="width:100%">
+    <img src="/couple.png" alt="couple" style="width:100%">
       <h3>Honeymoon Package</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <p>This packes is made for couples who need a romantic getaway.</p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
-    <img src="/family.png" alt="Nature" style="width:100%">
+    <img src="/family.png" alt="family" style="width:100%">
       <h3>Small Group/Family</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <p>This package is for groups of three. It includes </p>
     </div>
   </div>
   <div class="column">
     <div class="contenttravel">
-    <img src="/part.png" alt="Mountains" style="width:100%">
+    <img src="/party.png" alt="party" style="width:100%">
       <h3>Party Pack</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <p>This packages requires you to have 4 or more people. It costs $9,000/person, which insludes private single bedrooms, food, drinks, and access to private areas of the vechile.</p>
     </div>
   </div>
 <!-- END GRID -->
 </div>
 	
 <div class="contenttravel">
-  <img src="/w3images/p3.jpg" alt="Bear" style="width:100%">
   <h3>Recovery</h3>
-  <p>Most astronauts take around 45 days to recover from being in space(Wayne). Due to our high technology systems our passengers only need 15-30 days to recover. However, there may be excepts if you have other health risks. During this period you are...</p>
+  <p>Most astronauts take around 45 days to recover from being in space(Wayne). Due to our high technology systems our passengers only need 15-30 days to recover. However, there may be excepts if you have other health risks. During this period you are doing the opposite of what you did in training. Slowly every day we turn the space simulation down until you are back to earth's environment. You are also encourages to do physical activity every day, as being in space changes the way you move around in a normal setting.</p>
  
 </div>
 	
