--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
 
     <main>
 	    <h1>About Blast Off</h1>
-	    
+	    <img src="/aboutus.png">
 	    <h2>Our Mission Statement</h2>
 <p class= "mission">We guarantee all your space exploration dreams will come true when you fly with us. </p>
     
