--- a/packages.html
+++ b/packages.html
@@ -57,7 +57,7 @@
 
 <div class="contenttravel">
   <img src="/vehicles.png" alt="2 space ships" style="width:100%">
-  <h3>Vechiles</h3>
+  <h3>Vehicles</h3>
   <p>Our vehicles get designed by the best engineers to meet our high standards. We have long and detailed testing periods for each vehicle to ensure they are safe for our passengers. The vehicle you will board will depend on how many people we have flying out that day. The two vehicles are not too different from one another, so the experience is similar in both. We try to be energy efficient when we have a smaller group, which is why we have two different vehicles. In our vehicles, you will feel just like you are at home due to our accommodations and advanced technology that adjusts the environment inside the ship or plane to be similar to the one on Earth. However, this environment is not the exact same which is why the training period is so essential for every traveler. 
 	</p>
 </div>
